@@ -1,11 +1,8 @@
 import unittest
-import itertools
 import pickle
 import rpy2
 import rpy2.rinterface as rinterface
 import sys, os, subprocess, time, tempfile, io, signal, gc
-
-IS_PYTHON3 = sys.version_info[0] == 3
 
 rinterface.initr()
 
@@ -35,7 +32,7 @@ class EmbeddedRTestCase(unittest.TestCase):
         sys.stdout = tmp_file
         try:
             rinterface.consolePrint('haha')
-        except Exception, e:
+        except Exception as e:
             sys.stdout = stdout
             raise e
         sys.stdout = stdout
@@ -57,9 +54,9 @@ class EmbeddedRTestCase(unittest.TestCase):
             try:
                 tmp = rdate()
                 res = (False, None)
-            except RuntimeError, re:
+            except RuntimeError as re:
                 res = (True, re)
-            except Exception, e:
+            except Exception as e:
                 res = (False, e)
             queue.put(res)
         q = multiprocessing.Queue()
@@ -82,7 +79,7 @@ class EmbeddedRTestCase(unittest.TestCase):
         options = rinterface.get_initoptions()
         self.assertEqual(len(rinterface.initoptions),
                           len(options))
-        for o1, o2 in itertools.izip(rinterface.initoptions, options):
+        for o1, o2 in zip(rinterface.initoptions, options):
             self.assertEqual(o1, o2)
         
     def testSet_initoptions(self):
@@ -145,10 +142,6 @@ class EmbeddedRTestCase(unittest.TestCase):
         rpy_code = tempfile.NamedTemporaryFile(mode = 'w', suffix = '.py',
                                                delete = False)
         rpy2_path = os.path.dirname(rpy2.__path__[0])
-        if IS_PYTHON3:
-            pyexception_as = ' as'
-        else:
-            pyexception_as = ','
 
         rpy_code_str = """
 import sys
@@ -166,9 +159,9 @@ rcode += "Sys.sleep(0.01); "
 rcode += "}"
 try:
   ri.baseenv['eval'](ri.parse(rcode))
-except Exception%s e:
+except Exception as e:
   sys.exit(0)
-  """ %(rpy2_path, pyexception_as)
+  """ %(rpy2_path)
 
         rpy_code.write(rpy_code_str)
         rpy_code.close()
@@ -182,8 +175,8 @@ except Exception%s e:
         self.assertFalse(ret_code is None) # Interruption failed
 
     def testRpyMemory(self):
-        x = rinterface.SexpVector(xrange(10), rinterface.INTSXP)
-        y = rinterface.SexpVector(xrange(10), rinterface.INTSXP)
+        x = rinterface.SexpVector(range(10), rinterface.INTSXP)
+        y = rinterface.SexpVector(range(10), rinterface.INTSXP)
         x_rid = x.rid
         self.assertTrue(x_rid in set(z[0] for z in rinterface.protected_rids()))
         del(x)
@@ -220,7 +213,7 @@ class CallbacksTestCase(unittest.TestCase):
         try:
             code = rinterface.SexpVector(["3", ], rinterface.STRSXP)
             rinterface.baseenv["print"](code)
-        except Exception, e:
+        except Exception as e:
             sys.stderr = stderr
             raise e
         sys.stderr = stderr
@@ -254,7 +247,7 @@ class CallbacksTestCase(unittest.TestCase):
         sys.stderr = tmp_file
         try:
             res = rinterface.baseenv.get("flush.console")()
-        except Exception, e:
+        except Exception as e:
             sys.stderr = stderr
             raise e
         sys.stderr = stderr
@@ -286,7 +279,7 @@ class CallbacksTestCase(unittest.TestCase):
         sys.stderr = tmp_file
         try:
             res = rinterface.baseenv["readline"]()
-        except Exception, e:
+        except Exception as e:
             sys.stderr = stderr
             raise e
         sys.stderr = stderr
@@ -334,7 +327,7 @@ class CallbacksTestCase(unittest.TestCase):
             res = rinterface.baseenv["file.choose"]()
         except rinterface.RRuntimeError:
             pass
-        except Exception, e:
+        except Exception as e:
             sys.stderr = stderr
             raise e
         sys.stderr = stderr
@@ -378,7 +371,7 @@ class CallbacksTestCase(unittest.TestCase):
             res = rinterface.baseenv["file.show"](filename)
         except rinterface.RRuntimeError:
             pass
-        except Exception, e:
+        except Exception as e:
             sys.stderr = stderr
             raise e
         sys.stderr = stderr
